# apftool-rs

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.sh
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  rust.yml
src/: lib.rs  main.rs  rkcrc.rs
tests/: advanced_tests.rs  cli_tests.rs  lib_tests.rs
