[package]
name = "afptool-rs"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8.0"
assert_cmd = "2.0.12"
predicates = "3.0.3"